Closed
Bug 1275554
Opened 6 years ago
Closed 6 years ago
MediaEngine's mImage value is sometimes released too late in shutdown (final-CC)
Categories
(Core :: WebRTC: Audio/Video, defect, P1)
Core
WebRTC: Audio/Video
Tracking
()
RESOLVED
FIXED
mozilla52
People
(Reporter: jesup, Assigned: jesup)
Details
Attachments
(1 file)
2.83 KB,
patch
|
pehrsons
:
review+
gchang
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
Sometimes if you have active captures and close a browser, you get an assert from gfx about a texture being released too late in shutdown (final-cc). This is due to the mImage value. It's somewhat unclear why this isn't cleared out earlier, but that might be a race condition.
Assignee | ||
Comment 1•6 years ago
|
||
MozReview-Commit-ID: GNU7p3CyzjH
Attachment #8756319 -
Flags: review?(pehrsons)
Updated•6 years ago
|
Rank: 19
Priority: -- → P1
Comment 2•6 years ago
|
||
Comment on attachment 8756319 [details] [diff] [review] clear mImage aggressively when no longer needed Review of attachment 8756319 [details] [diff] [review]: ----------------------------------------------------------------- Excellent!
Attachment #8756319 -
Flags: review?(pehrsons) → review+
Pushed by rjesup@wgate.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/5997ad4005f9 clear mImage aggressively when no longer needed r=perhsons
Comment 4•6 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/5997ad4005f9
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox52:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
Comment 5•6 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/5997ad4005f9
status-firefox50:
--- → affected
status-firefox51:
--- → affected
jesup, is this something you might want to uplift to 51 ? Thanks!
Flags: needinfo?(rjesup)
Assignee | ||
Comment 7•6 years ago
|
||
Comment on attachment 8756319 [details] [diff] [review] clear mImage aggressively when no longer needed Approval Request Comment [Feature/regressing bug #]: N/A [User impact if declined]: Crashes from the GFX code (asserts) in debug builds (race conditio) [Describe test coverage new/current, TreeHerder]: We haven't seen it in treeherder, just local tests [Risks and why]: virtually no risk, just moves where things are released to be earlier instead of on destruction. Risk would only be of nullptr references (and we've baked a long time) [String/UUID change made/needed]: none.
Flags: needinfo?(rjesup)
Attachment #8756319 -
Flags: approval-mozilla-aurora?
Comment 8•6 years ago
|
||
Comment on attachment 8756319 [details] [diff] [review] clear mImage aggressively when no longer needed Fix a potential crash. Take it in 51 aurora.
Attachment #8756319 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Assignee | ||
Comment 9•6 years ago
|
||
https://hg.mozilla.org/releases/mozilla-aurora/rev/6bd4900e44d64e0fc3f87494b0e0952f42a2ae19
You need to log in
before you can comment on or make changes to this bug.
Description
•