Bug 1275554: clear mImage aggressively when no longer needed r=perhsons a=gchang

MozReview-Commit-ID: GNU7p3CyzjH